fixed the datepicker calender issue.

--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -134,13 +134,13 @@
 
                     <div class="row">
                         <div class="col-md-6">
-                            <label>Start Date<span class="text-danger lb-sm">(MM/DD/YYYY)*</span></label>
+                            <label>Start Date<span class="text-danger lb-sm">(DD/MM/YYYY)*</span></label>
                             <div class="form-group">
-                                <div id="dvStartDate" class="col-md-6 date datealign mrm-cal" onclick="HighlightSelectedDate()">
+                                <div id="dvStartDate" class="col-md-6 date datealign">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                            (object)new { disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
+                                            (object)new { @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                     <div class="validmsgSdate"></div>
@@ -149,13 +149,13 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>End Date<span class="text-danger lb-sm">(MM/DD/YYYY)*</span></label>
+                            <label>End Date<span class="text-danger lb-sm">(DD/MM/YYYY)*</span></label>
                             <div class="form-group">
-                                <div id="dvEndDate" class="col-md-6 form-group date datealign mrm-cal">
+                                <div id="dvEndDate" class="col-md-6 form-group date datealign">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
-                                            (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                            (object)new { disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
+                                            (object)new { @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                     <div class="validmsgEdate"></div><div class="validmsgDatecompare"></div>
